Correcting spacing class and variable names.

--- a/assets/sass/components/spacing/_spacing.scss
+++ b/assets/sass/components/spacing/_spacing.scss
@@ -22,8 +22,8 @@
   margin-block-start: var(--spacing-xs);
 }
 
-.mt--xss {
-  margin-block-start: var(--spacing-xss);
+.mt--xxs {
+  margin-block-start: var(--spacing-xxs);
 }
 
 .mt--0 {
@@ -31,7 +31,7 @@
 }
 
 .mb--xxl {
-  margin-block-end: var(--spacing-xll);
+  margin-block-end: var(--spacing-xxl);
 }
 
 .mb--xl {
@@ -55,7 +55,7 @@
 }
 
 .mb--xxs {
-  margin-block-end: var(--spacing-xss);
+  margin-block-end: var(--spacing-xxs);
 }
 
 .mb--0 {
@@ -63,7 +63,7 @@
 }
 
 .mx--xxl {
-  margin-block: var(--spacing-xll);
+  margin-block: var(--spacing-xxl);
 }
 
 .mx--xl {
@@ -86,8 +86,8 @@
   margin-block: var(--spacing-xs);
 }
 
-.mx--xss {
-  margin-block: var(--spacing-xss);
+.mx--xxs {
+  margin-block: var(--spacing-xxs);
 }
 
 .mx--0 {
